Causeview Package Complete/ant script/retrieveUnpackaged/objects/Recurring_Payment_Batch__c.object
<CustomObject>
    <description>Causeview - Payment Gateway recurring credit card payment batch.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments regarding recurring payment processed.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC/ACH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Date__c</fullName>
        <description>Date the batch of payments were processed.</description>
        <label>Process Date</label>
        <type>Date</type>
    </fields>
    <label>Recurring Payment Batch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Process_Date__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RPB-{00000000}</displayFormat>
        <label>Recurring Payment Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Payment Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>